--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
